--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 pandas==1.3.5
 numpy==1.22.0
-matplotlib==3.5.1
-seaborn==0.12.2
 scikit-image==0.18.1
 streamlit==1.21.0
 scikit-learn==1.1.2
+torch==2.1.2+cu121
