--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pandas==1.3.5
-numpy==1.22.0
-scikit-image==0.18.1
-streamlit==1.21.0
-scikit-learn==1.1.2
-torch==2.1.2+cu121
-torchvision==0.16.2+cu121
-pillow==9.0.0
+pandas
+numpy
+scikit-image
+streamlit
+scikit-learn
+torch
+torchvision
+pillow
+
